# pattern_manager

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  package.xml  requirements.txt  setup.py
config/: linear_new.yaml
config/examples/: linear_new.yaml
doc/: Makefile  conf.py  index.rst  make.bat  manifest.yaml  modules.rst  pattern_manager.collection.rst  pattern_manager.patterns.rst  pattern_manager.plugins.rst  pattern_manager.rst
doc/_build/doctrees/: environment.pickle  index.doctree  nodes.doctree  pattern_manager.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  nodes.html  objects.inv  pattern_manager.html  py-modindex.html  searchindex.js
doc/_build/html/_sources/: index.txt  nodes.txt  pattern_manager.txt
doc/html/: genindex.html  index-msg.html  index.html  modules.html  nodes.html  objects.inv  pattern_manager.html  pattern_manager.plugins.html  py-modindex.html  search.html  searchindex.js
doc/html/.doctrees/: environment.pickle  index.doctree  modules.doctree  nodes.doctree  pattern_manager.doctree  pattern_manager.plugins.doctree
doc/html/_sources/: index.txt
doc/html/msg/: CreationParams.html  Params.html  Point.html
doc/html/srv/: CreateCircularPattern.html  CreateGroup.html  CreateLinearPattern.html  CreateRectangularPattern.html  CreateScatterPattern.html  CreateTransform.html  Filename.html  GetCurrentId.html  GetIds.html  GetTransformId.html  GetTransformParams.html  GetTransforms.html  SetActive.html  SetIterationOrder.html  SetName.html  SetParent.html  SetRotation.html  SetTranslation.html  TransformId.html  UpdateTransform.html
launch/: pattern_manager.launch
msg/: CreationParams.msg  Deps.msg  GroupDeps.msg  NameAndId.msg  Params.msg  PatternParent.msg  Point.msg
nodes/: pattern_manager  pattern_manager_new  pattern_manager_node  pattern_manager_node.py
resources/: circle_pattern.yml  linear_pattern.yml  rect_pattern.yml  scatter_pattern.yml
src/: main.py  pm.py
src/base_pattern/: __init__.py  pattern.py
src/linear_pattern/: pattern.py
src/pattern_manager/: __init__.py  api.py  group.py  interface.py  iterable_tree.py  main.py  manager.py  pattern.py  patterns.py  plugin.py  test.py  transform.py  tree.py  util.py  utils.py  xform.py
src/pattern_manager/collection/: __init__.py  container.py  container_group.py  container_pattern.py  group.py  manager.py  manager_new.py  pattern_group.py
src/pattern_manager/container/: container.py
src/pattern_manager/containers/: __init__.py  pattern_group.py  pattern_layer.py
src/pattern_manager/examples/: __init__.py  example_dicts.py
src/pattern_manager/group/: group.py
src/pattern_manager/manager/: manager.py
src/pattern_manager/patterns/: __init__.py  pattern.py  pattern_base.py  pattern_base_new.py  pattern_circular.py  pattern_linear.py  pattern_rectangular.py  pattern_scatter.py
src/pattern_manager/plugins/: __init__.py  pattern_circular.py  pattern_honeycomb.py  pattern_linear.py  pattern_rectangular.py  pattern_scatter.py
src/rectangular_pattern/: __init__.py  pattern.py
src/scatter_pattern/: __init__.py  pattern.py
src/utilities/: __init__.py
srv/: CreateCircularPattern.srv  CreateGroup.srv  CreateHoneycombPattern.srv  CreateLinearPattern.srv  CreatePattern.srv  CreateRectangularPattern.srv  CreateScatterPattern.srv  CreateTransform.srv  ElementIterator.srv  ElementName.srv  FindGroup.srv  GetChildren.srv  GetCurrentId.srv  GetGroups.srv  GetIds.srv  GetIterationOrder.srv  GetTransformId.srv  GetTransformName.srv  GetTransformParams.srv  GetTransforms.srv  GetTransformsInfo.srv  GroupIndex.srv  GroupIterator.srv  GroupName.srv  GroupTree.srv  PatternType.srv  PatternTypes.srv  SetActive.srv  SetIterationOrder.srv  SetName.srv  SetParent.srv  SetTranslation.srv  TransformId.srv  UpdateTransform.srv  UpdateVar.srv
test/: pattern_base.py  pattern_plugins.py  test_group.py  test_manager.py  test_pattern.py  test_pattern_plugins.py  test_patterns.py  test_plugin.py  test_util.py  test_xform.py
