<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pattern_manager</name>
  <version>0.0.1</version>
  <description>A ROS-Industrial component for defining, configuring, and using patterns in industrial robot applications.
This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No. 732287 (ROSIN).</description>
  <maintainer email="mrp@teknologisk.dk">Mikkel Rath Hansen</maintainer>
  <maintainer email="mvb@teknologisk.dk">Mads Vainoe Baatrup</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>python-numpy</depend>

  <build_depend>python-catkin-pkg</build_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
